--- a/hw2.html
+++ b/hw2.html
@@ -12,7 +12,7 @@
 		<h3 id="Title">The Rhyme of the Ancient Mariner</h3>
 		
 		
-<p id="poem" style="font-family: arial, sans-serif;	color: FF6600; font-style: italic;">
+<p class="poem"> 
 
 <script type="text/javascript">
 document.writeln("It is an ancient Mariner, <br>");
@@ -23,7 +23,18 @@ document.writeln("Now wherefore stopp'st thou me?\"<br>");
 
 
 </p>
-		
-	</div>
+</div>
+
+<div>
+	<p class="poem">
+		<a href="http://www.umiacs.umd.edu/~oard/teaching/603/spring15/hw/H2/">Hw2 Description</a>
+	</p>
+	<p class = "poem"><a href="index.html">Home</a></p>
+</div>
+
+<div id="footer">
+<p>Last updated: 06FEB2015</p>	
+
+</div>	
 </body>
 </html>
