--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<h5>
 				<ol>
 					<ul><a href="hw1.html"> Hw1</a></ul>
-					<p><ul>Hw2</ul></p>
+					<p><a href="hw2.html"><ul>Hw2</ul></a></p>
 					<p><ul>Hw3</ul></p>
 					<p><ul>Hw4</ul></p>
 					<p><ul>Hw5</ul></p>
