--- a/hw2.html
+++ b/hw2.html
@@ -15,10 +15,16 @@
 <p class="poem"> 
 
 <script type="text/javascript">
-document.writeln("It is an ancient Mariner, <br>");
-document.writeln("And he stoppeth one of three. ,<br>");
-document.writeln("\"By thy long grey beard and glittering eye, <br>");
-document.writeln("Now wherefore stopp'st thou me?\"<br>");
+
+var a = "It is an ancient Mariner, <br>";
+var b = "And he stoppeth one of three. ,<br>";
+var c = "\"By thy long grey beard and glittering eye, <br>";
+var d = "Now wherefore stopp'st thou me?\"<br>";
+
+document.writeln(a);
+document.writeln(b);
+document.writeln(c);
+document.writeln(d);
 </script>
 
 
