--- a/hw3/hw3.html
+++ b/hw3/hw3.html
@@ -1,140 +1,226 @@
-<html>
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
-  <link rel="stylesheet" href="hw3.css" type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+"http://www.w3.org/TR/html4/strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		
+		<meta name="author" content="Robert Pickering" />
+		 <link rel="stylesheet" href="hw3.css" type="text/css">
   <title>INFM 603 Spring 2015 Hw3</title>
   <meta http-equiv="expires" content="0">
-  <!-- <link href="hw2.css" rel="stylesheet" type="text/css"> -->
-</head>
+		
+		<script>
+		
+function calculate (p, ir) {
+	var pr = p;  //This is the principle value and serves as the first present value
+	var i = ir;  //This is the interest rate
+	var factor = (1+i);  //This is what we multiply the presesnt value by raised to the exponent of the year
+	var fv = []; //This is the array for the future values
+	var interest = []; // This is the array for interest for each year
+	var yeartot= [];
+	/* This is the for loop which will fill the array with compound interest values
+	 * The Future value (fv) is calculated by multiplying the present value
+	 * by (1 + i)^j and fills the array fv with each value of j as the for loop loops.
+	 * The array interest[j] is filled by multiplying each value of fv by i for each 
+	 * iteration of the loop.
+	 * End of year values are calculated and stored in yeartot[] by adding fv and interest
+	 * for each progressive year.
+	 * 
+	 * The arrays are dumped successively to the divs at the end of the file.
+	 * An offset of 10 and 20 are applies to 
+	 */
+	
+	for (var j=0; j < 11; j++) {
+		fv[j] = (pr * Math.pow(factor, j)); 
+		interest[j] = (fv[j]) * (i);
+		yeartot[j] = fv[j] + interest[j];
+	  document.getElementById(j).innerHTML = fv[j] ; 
+	  document.getElementById(j+11).innerHTML = interest[j] ; 
+	  document.getElementById(j+22).innerHTML = yeartot[j] ; 
+	   
+	  
+	};
 
-<body>
+}
+
+/*
+ * The first part gets the Principle and Interest Rate entries from the user
+ * Next we check to see if there is at least an entry.
+ * Next we check to see that it is numeric.
+ * Next we check to see that it is greater than 0.
+ * Next we check to see that the user doesn't just enter a space.  Beyond that, 
+ * we assume malicious behavior and the user gets what they derserve.
+ * If all of the above passes, the values are passed to the calculate 
+ * function.
+ */			
+function compinterest(x, y, helperMsg){
+	
+	var principle = Number(document.getElementById('inv').value);
+	var interestrate = Number(document.getElementById('intr').value);
+	
+	if(principle.length == 0 || interestrate.length == 0){
+		alert(helperMsg);
+		elem.focus();
+		return true;
+		
+	}else if(isNaN(x.value) || isNaN(y.value)){
+		alert(helperMsg);
+		elem.focus();
+		return true;
+	}
+	else if(x.value < 0 || y.value < 0 ){
+		alert(helperMsg);
+		elem.focus();
+		return true;
+	}
+	else if (x.value == '') {
+		
+		alert(helperMsg);
+		elem.focus();
+		return true;
+		
+	}
+	
+	else{
+		calculate(principle, interestrate);
+		return true;
+	}
+	
+}
+
+		</script>
+	</head>
+	
+	
+	<body>
+
 <div id ="Intro">
  
     <h3>
-      Another Javascript Calculator!
+      Another Javascript Compound Interest Calculator!
     </h3>
-    <p class="IntrestCalc">Herein lies yet another rendition of a Javascript Calulator.  
-    	Essentially, it prints out each year's return for a given investment at a given annual percent return.  
-    	Interest is compounded annually.
+    <p class="IntrestCalc">Herein lies yet another rendition of the venerable Javascript based Compound Interest Calulator.  <br>
+    	Essentially, it prints out each year's return for a given investment at a given annual percent return.  <br>
+    	Interest is compounded annually.  The second column starts with the your initial investment followed by the <br>
+    	value of the investment at the start of each successive year.  Column 3 provides the interest earned in the year.<br>
+    	Finally, Column 4 provides the value of investment at the end of a particular year.  The calculator is only functional <br>
+    	for years 0 through 10.
 
     <h4>
       Instructions:
     </h4>
     Enter only numbers for "Principle" investment and "Interest Rate".  
     For example, if you want to calculate ten years of return data for an initial investment of $10,000.00 at an interest rate of 8% (or 0.08), 
-    simply enter 10000.00 and 0.08.  Entries other than numbers will cause this script to error out.
+    simply enter 10000.00 and 0.08.  Entries other than numbers will cause this script to error out. <br>
+    Don't make the mistake of entering 10 for ten percent as this will calculate a 1000% rate of return.
   </p>
-</div>
+</div>		
+	
+	<!-- This is the user input form -->
+		
 <div id="inputform">
    <form>
-Principle: <input type='text' id='principle'/> <br>
-Interest Rate: <input type="text" id='interest'><br>
-<input type='button' 
-  onclick="isNumeric(document.getElementById('principle'), '1-9 Only Please')"
-  onclick="isNumeric(document.getElementById('interest'), 'Numbers Only')" 
-  value='Check Field' />
+   	<table border="0" cellspacing="5" cellpadding="5">
+		   <tr>
+		   	<th>Principle Investment: 
+		   		</th>
+		   	<td><input type='text' id='inv'/><br></td>
+		   	</tr>
+		   <tr><td>
+		   	Interest Rate: 
+		   	</td>
+		   	<td><input type='text' id='intr'/>
+		   		
+		   	</td>
+		   	</tr>
+		   	<tr>
+		   		<td> 
+		   			</td>
+		   		<td>
+		   			<input type='button' 
+						onclick="compinterest(document.getElementById('inv'), document.getElementById('intr'), 'Please Enter a Value greater than or equal to 0')"
+						value='Calculate!' />
+		   		</td>
+		   	</tr>
+	   </table>
+
+
 </form>
 </div>
 
-<script type='text/javascript'>
+<!-- This is the table to hold the output values. -->
 
-	function isNumeric(elem, error){
-		if(isNaN(elem)){
-			alert(error);
-			elem.focus();
-			return false;
-		}else{
-			return true;
-		}
-	}
-</script>
-
-
-
-
-<hr>
-
-<div id="table">
-
-
-<table border="1">
-  <caption>10 Year Return on investment</caption>
-  <col>
-  <col>
-  <col>
-  <col>
-  <tbody>
-    <tr id="rowhead">
-      <td>Year (n)</td>
-      <td>Total Principle (P) on which interest is Calculated in Year n &nbsp;
-      </td>
-      <td>Interest (i) owed at the end of Year n from Year n's Unpaid Total
-        Principle &nbsp;</td>
-      <td>Total amount fue at the end of Year n. New Total for Principle for
-        Year n+1 &nbsp;</td>
-    </tr>
-    <tr id ='y1'>
-      <td id = "n1">1</td>
-      <td id = "p1">0</td>
-      <td id = "i1">0</td>
-      <td id = "tot1">0</td>
-    </tr>
-    <tr id = "y2">
-      <td id = "n2">2</td>
-      <td id = "p2">0</td>
-      <td id = "i2">0</td>
-      <td id = "tot2">0</td>
-    </tr>
-    <tr id = "y3">
-      <td id = "n3">3</td>
-      <td id = "p3">0</td>
-      <td id = "i3">0</td>
-      <td id = "tot3">0</td>
-    </tr>
-    <tr id = "y4">
-      <td id = "n4">4</td>
-      <td id = "p4">0</td>
-      <td id = "i4">0</td>
-      <td id = "tot4">0</td>
-    </tr>
-    <tr id = "y5">
-      <td id = "n5">5</td>
-      <td id = "p5">0</td>
-      <td id = "i5">0</td>
-      <td id = "tot5">0</td>
-    </tr>
-    <tr id = "y6">
-      <td id = "n6">6</td>
-      <td id = "p6">0</td>
-      <td id = "i6">0</td>
-      <td id = "tot6">0</td>
-    </tr>
-    <tr id = "y7">
-      <td id = "n7">7</td>
-      <td id = "p7">0</td>
-      <td id = "i7">0</td>
-      <td id = "tot7">0</td>
-    </tr>
-    <tr id = "y8">
-      <td id = "n8">8</td>
-      <td id = "p8">0</td>
-      <td id = "i8">0</td>
-      <td id = "tot8">0</td>
-    </tr>
-    <tr id = "y9">
-      <td id = "n9">9</td>
-      <td id = "p9">0</td>
-      <td id = "i9">0</td>
-      <td id = "tot9">0</td>
-    </tr>
-    <tr id = "y10">
-      <td id = "n10">10</td>
-      <td id = "p10">0</td>
-      <td id = "i10">0</td>
-      <td id = "tot10">0</td>
-    </tr>
-  </tbody>
+<table border="1" cellspacing="0" cellpadding="0">
+	<tr>
+		<th>&nbsp;Year&nbsp; </th>
+		<th>&nbsp; Value at <br>beginning of the year&nbsp;</th>
+		<th>&nbsp; Interest&nbsp;</th>
+		<th>&nbsp; Initial Value + <br>Interest for the Year&nbsp;</th>
+	</tr>
+	
+	<tr>
+		<td>
+		0<br>
+		1<br>
+		2<br>
+		3<br>
+		4<br>
+		5<br>
+		6<br>
+		7<br>
+		8<br>
+		9<br>
+		10<br>
+		</td>
+		
+		<td>
+			<div id="0"> </div>
+			<div id="1"> </div>
+			<div id="2"> </div>
+			<div id="3"> </div>
+			<div id="4"> </div>
+			<div id="5"> </div>
+			<div id="6"> </div>
+			<div id="7"> </div>
+			<div id="8"> </div>
+			<div id="9"> </div>
+			<div id="10"> </div>
+			
+		</td>
+		
+		<td>
+			
+			<div id="11"> </div>
+			<div id="12"> </div>
+			<div id="13"> </div>
+			<div id="14"> </div>
+			<div id="15"> </div>
+			<div id="16"> </div>
+			<div id="17"> </div>
+			<div id="18"> </div>
+			<div id="19"> </div>
+			<div id="20"> </div>
+			<div id="21"> </div>
+		</td>
+		
+		<td>
+			<div id="22"> </div>
+			<div id="23"> </div>
+			<div id="24"> </div>
+			<div id="25"> </div>
+			<div id="26"> </div>
+			<div id="27"> </div>
+			<div id="28"> </div>
+			<div id="29"> </div>	
+			<div id="30"> </div>
+			<div id="31"> </div>
+			<div id="32"> </div>		
+		</td>
+	</tr>
+		
 </table>
-</div>
-</body>
+
+	</body>
 </html>
+
