--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<ol>
 					<ul><a href="hw1.html"> Hw1</a></ul>
 					<p><a href="hw2.html"><ul>Hw2</ul></a></p>
-					<p><ul>Hw3</ul></p>
+					<p><a href="hw3.html"><ul>Hw3</ul></a></p>
 					<p><ul>Hw4</ul></p>
 					<p><ul>Hw5</ul></p>
 					<p><ul>Hw6</ul></p>
