--- a/hw3/hw4testing.html
+++ b/hw3/hw4testing.html
@@ -43,7 +43,7 @@
 		   <tr>
 		   	<th>What is your number? 
 		   		</th>
-		   	<td><input type='text' id="searchnum"/><br></td>
+		   	<td><input type='text' id="searcher"/><br></td>
 		   	</tr>
 		   
 		   	<tr>
