--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					<ul><a href="hw1.html"> Hw1</a></ul>
 					<p><a href="hw2.html"><ul>Hw2</ul></a></p>
 					<p><a href="hw3.html"><ul>Hw3</ul></a></p>
-					<p><ul>Hw4</ul></p>
-					<p><ul>Hw5</ul></p>
+					<p><a href="hw4.html"><ul>Hw4</ul></a></p>
+					<p><a href="hw5.html"><ul>Hw5</ul></a></p>
 					<p><ul>Hw6</ul></p>
 				</ol>
 			</h5>
